--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.0",
     "swiper": "^11.1.12",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
-    },
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
